Moved root build script config to the right by convention place for repos. Added idea skeleton to test .idea generation/get default values into IntelliJ. Gradle 8.0.2 upgrade. Need to decouple copied build logic and explicit dependencies still to have all I need for a language plugin. Will likely add buildSrc logic for common existing build behavior + custom tasks that will later go into the language plugin, as part of this. One needs the other.